--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
+body {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.app {
+  position: relative;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+}
+
+/* counter component */
+.counter {
+  height: 4em;
+  width: 12em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  box-shadow: 0 0 0 2px brown;
+  border-radius: 10px;
+}
+
+input {
+  border: none;
+  outline: none;
+  background-color: #f8e9e9;
+  height: 100%;
+  width: 100%;
+  border-left: 2px solid brown;
+  border-right: 2px solid brown;
+  color: brown;
+  font-size: 1.4em;
+  font-weight: bold;
+  font-family: "Roboto";
+  text-align: center;
+  padding: 0;
+}
+
+button {
+  background-color: white;
+  border: 0;
+  font-size: 2em;
+  height: 100%;
+  width: 100%;
+  font-weight: bold;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red {
+  color: #a54946;
+  border-radius: 10px 0 0 10px;
+}
+.red button {
+  border-radius: 10px 0 0 10px;
+  color: brown;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inc {
+  background-color: #a54946;
+  border-radius: 0 10px 10px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.inc button {
+  border-radius: 0 10px 10px 0;
+  background-color: #a54946;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* loader */
+.loader {
+  display: flex;
+  position: absolute;
+  place-items: center;
+  width: 173px;
+  justify-content: space-around;
+  top: 85px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.loader h5 {
+  font-weight: 600;
+}
+
+.loader div {
+  /* custom loader using css */
+
+  /*
+  border-radius: 50%;
+  border-right: 1.6px dashed black;
+  border-bottom: 1.6px dotted black;
+  border-left: 1.6px solid black;
+  border-top: 1.6px solid black; 
+  */
+
+  background-image: url("./ss.png");
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotateZ(360deg);
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+/* counter value component */
+.counterValue {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  width: 8em;
+}
+
+.counterValue p {
+  margin: 5px 0 0 0;
+  font-weight: 600;
+  font-size: small;
+}
+.counterValue h5 {
+  margin: 20px 0 0 0;
+  font-weight: bolder;
 }
